@@ -34,7 +34,7 @@ public class DiscardEffectResolverTest extends MindbugGameTest {
         game = startGame(new Player(playerService.createPlayer("Player1")), new Player(playerService.createPlayer("Player2")));
 
         randomCard = game.getCurrentPlayer().getHand().getFirst();
-        opponentPlayer = game.getCurrentPlayer().getOpponent(game.getPlayers());
+        opponentPlayer = game.getOpponents().getFirst();
 
         effect = new DiscardEffect();
         effect.setType(EffectType.DISCARD);
@@ -123,7 +123,7 @@ public class DiscardEffectResolverTest extends MindbugGameTest {
         effect.setValue(2);
         effect.setDrawPile(true);
 
-        CardInstance firstCard = opponentPlayer.getDrawPile().get(0);
+        CardInstance firstCard = opponentPlayer.getDrawPile().getFirst();
         CardInstance secondCard = opponentPlayer.getDrawPile().get(1);
         CardInstance thirdCard = opponentPlayer.getDrawPile().get(2);
 
